<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">幸福河下</string>
    <string name="link_net">无网络连接</string>
    <string name="prompt">提示</string>
    <string name="confirm">确定</string>
    <string name="check_net_setting">请检查网络设置</string>
    <string name="ret_update">最近更新:</string>
    <string name="down_load_more">松开载入更多</string>
    <string name="up_load_more">上拉加载更多</string>
    <string name="down_refresh">下拉刷新</string>
    <string name="up_refresh">松开刷新数据</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="loading_finsh">加载完成</string>
    <string name="net_unuser">网络连接不可用，请稍后重试</string>
    <string name="net_timeout">连接服务器超时</string>
    <string name="net_unstability">当前网络不稳定，请重新再试</string>
    <string name="net_fail">连接服务器失败</string>
    <string name="tip_title">提示信息</string>
    <string name="tip_permission_content">当前应用缺少必要权限，该功能暂时无法使用。如若需要，请单击【确定】按钮前往设置中心进行权限授权。</string>
    <string name="cancel">取消</string>
    <string name="comfirm">确认</string>
    <string name="comfirm_1">确定</string>
    <string name="finish">完成</string>
    <string name="comfirm_finish">确认完成</string>
    <string name="ht_space">回&#160;&#160;&#160;&#160;退</string>
    <string name="comfirm_fail">确认失败</string>
    <string name="comfirm_space_1">确&#160;&#160;&#160;&#160;定</string>
    <string name="update_space_1">修&#160;&#160;&#160;&#160;改</string>
    <string name="ht_fail">回退失败</string>
    <string name="ht_success">回退成功</string>
    <string name="load_more_data">加载更多...</string>
    <string name="no_more_data">没有更多信息了...</string>
    <string name="index">首页</string>
    <string name="cname">幸福河下综合服务网格化管理平台</string>
    <string name="information">最新通知：</string>
    <string name="my_info">我的</string>
    <string name="title_activity_login">登录</string>
    <string name="gryw">个人业务</string>
    <string name="sqfw">便民服务</string>
    <string name="sxgzxxcj">综合服务</string>
    <string name="dbsx">待办事项</string>
    <string name="ybsx">已办事项</string>
    <string name="rwfp">任务分派</string>
    <string name="gzfk">工作反馈</string>
    <string name="zxtz">最新通知</string>
    <string name="sqxw">河下动态</string>
    <string name="ckdt">网格地图</string>
    <string name="xxcj">信息采集</string>
    <string name="qtgz">其他工作</string>
    <string name="rdzj">人大之家</string>
    <string name="tjfx">河下风采</string>
    <string name="djxx">党建学习</string>
    <string name="fwmdm">服务面对面</string>
    <string name="mqztc">民情直通车</string>
    <string name="cjlb">村居列表</string>
    <string name="aqsc">应急服务</string>
    <string name="dj">党建</string>
    <string name="jly">社会养老</string>
    <string name="fwzw">综合执法</string>
    <string name="xshs">协税护税</string>
    <string name="qygz">企业服务</string>
    <string name="mz">民政</string>
    <string name="jhsy">卫生健康</string>
    <string name="sfxz">政法综治</string>
    <string name="cscxgl">长效管理</string>
    <string name="xfwd">和谐社区</string>
    <string name="xqgsq">小区归社区</string>
    <string name="zsjsb">肇事肇祸精神病患者：</string>
    <string name="zdqsn">重点青少年：</string>
    <string name="sqjd">社区戒毒人员：</string>
    <string name="xjry">邪教人员：</string>
    <string name="mdjfdjy">矛盾纠纷调解员：</string>
    <string name="mdjfxxy">矛盾纠纷信息员：</string>
    <string name="fzxcy">法制宣传员：</string>
    <string name="pfzyz">普法志愿者：</string>
    <string name="azbjry">安置帮教人员：</string>
    <string name="flgw">法律顾问：</string>
    <string name="mdjfdjy_g">矛盾纠纷调解员（网格）：</string>
    <string name="mdjfxxy_g">矛盾纠纷信息员（网格）：</string>
    <string name="fzxcy_g">法制宣传员（网格）：</string>
    <string name="pfzyz_g">普法志愿者（网格）：</string>
    <string name="flgw_g">法律顾问（网格）：</string>
    <string name="zrr_">责任人：</string>
    <string name="fwddzrr_">防违大队责任人：</string>
    <string name="zrr_phone_">责任人号码：</string>
    <string name="fwddzrr_phone">防违大队责任人号码：</string>
    <string name="ajy_">安监员：</string>
    <string name="ajy_phone_">安监员号码：</string>
    <string name="jyyhbzs">经营烟花爆竹商：</string>
    <string name="jyyhbzs_">经营烟花爆竹商</string>
    <string name="rpzf_">肉皮作坊：</string>
    <string name="rpzf">肉皮作坊</string>
    <string name="dzpjgf_">豆制品加工：</string>
    <string name="dzpjgf">豆制品加工</string>
    <string name="jzgd_">建筑工地：</string>
    <string name="tzsb_">特种设备：</string>
    <string name="wxhxp_">危险化学品：</string>
    <string name="cpy_">成品油：</string>
    <string name="ge">个</string>
    <string name="hu">户</string>
    <string name="ltqy_">列统企业：</string>
    <string name="myqy_">民营企业：</string>
    <string name="jtqy_">集体企业：</string>
    <string name="dxzz_">党小组长：</string>
    <string name="dxzzs_">党小组数：</string>
    <string name="xqsl_">小区数量：</string>
    <string name="dys_">党员数：</string>
    <string name="tsdjhd_">特色党建活动：</string>
    <string name="tsdjhd">特色党建活动</string>
    <string name="kndys_">困难党员数：</string>
    <string name="dxzz_phone_">党小组长号码：</string>
    <string name="wjh_">违建户：</string>
    <string name="dj_phone_">监督电话：</string>
    <string name="hsy_">护税员：</string>
    <string name="hsy_phone_">护税员电话：</string>
    <string name="jhld_">结合领导：</string>
    <string name="jhld_phone_">结合领导电话：</string>
    <string name="jd_mz_phone_">监督电话（民政办）：</string>
    <string name="jd_cw_phone_">监督电话（村委会）：</string>
    <string name="wei">位</string>
    <string name="cjr_">残疾人：</string>
    <string name="cjr_1_">持证残疾人：</string>
    <string name="cjr_2_">重残生活补贴：</string>
    <string name="cjr_3_">其他类生活补贴：</string>
    <string name="cjr_4_">一级护理补贴：</string>
    <string name="cjr_5_">二级护理补贴：</string>
    <string name="lsrt_">留守儿童：</string>
    <string name="yfdx_">优抚对象：</string>
    <string name="ldlx_">流动类型：</string>
    <string name="yflx_">优抚类型：</string>
    <string name="ylfns_">育龄妇女数：</string>
    <string name="dsznhs_">独生子女户数：</string>
    <string name="jlfzhs_">奖励扶助户数：</string>
    <string name="jlfz_shengf">省扶：</string>
    <string name="jlfz_shif">市扶：</string>
    <string name="jlfz_sd">失独：</string>
    <string name="jlfz_sc">伤残：</string>
    <string name="ldrks_">流动人口数：</string>
    <string name="sdjths_">失独家庭户数：</string>
    <string name="jsknhs_">计生困难户数：</string>
    <string name="ykby_">特困(五保)供养：</string>
    <string name="ykby_1">集中供养人员：</string>
    <string name="ykby_2">分散供养人员：</string>
    <string name="ykby_3">城市三无人员：</string>
    <string name="ykby_4">孤儿及困境儿童：</string>
    <string name="zlj_">80岁以上尊老金：</string>
    <string name="zlj_1">80-89周岁人员：</string>
    <string name="zlj_2">90-99周岁人员：</string>
    <string name="zlj_3">100周岁以上：</string>
    <string name="hyzk">婚姻状况：</string>
    <string name="sex">性别：</string>
    <string name="rzzt">认证状态：</string>
    <string name="wgy_">网格员：</string>
    <string name="wgz_">网格长：</string>
    <string name="wgy_phone_">网格员号码：</string>
    <string name="wgz_phone_">网格长号码：</string>
    <string name="sqfxry_">社区服刑人员：</string>
    <string name="sqjzry_">社区矫正人员：</string>
    <string name="xsjjry_">刑释解教人员：</string>
    <string name="qsnwffz_">青少年违法犯罪：</string>
    <string name="ghr_">管护人：</string>
    <string name="ghr_phone_">管护人电话：</string>
    <string name="ljc_">垃圾池：</string>
    <string name="ljt_">垃圾桶：</string>
    <string name="ljqycs_">垃圾清运次数：</string>
    <string name="ljrcl_">垃圾日产量：</string>
    <string name="ljssd_">垃圾输送点：</string>
    <string name="qtglsb_">其他管理设备：</string>
    <string name="qtnr_">其他关于网格内容信息：</string>
    <string name="ci">次</string>
    <string name="dun">吨</string>
    <string name="bar_">包案人：</string>
    <string name="bar_phone_">包案人号码：</string>
    <string name="zdrq_">信访诉求人员：</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="hint_email">请输入账号</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="action_sign_in">登&#160;&#160;&#160;&#160;录</string>
    <string name="error_invalid_password">密码不符合要求！</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_email_required">账号不为空！</string>
    <string name="error_username_required">用户名不为空！</string>
    <string name="error_password_required">密码不为空！</string>
    <string name="error_username_at">账号格式不对！</string>
    <string name="login_fail">登录失败！</string>
    <string name="account_pwd_inc">账号或密码错误！</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register_account">注册账号</string>
    <string name="forget">忘记密码</string>
    <string name="phone">手机号</string>
    <string name="phone_">手机号：</string>
    <string name="password">密&#160;&#160;&#160;&#160;码</string>
    <string name="v_code">验证码</string>
    <string name="register">注&#160;&#160;&#160;&#160;册</string>
    <string name="reg_input_phone">请输入手机号</string>
    <string name="reg_input_account">请输入用户名</string>
    <string name="reg_input_realname">请输入姓名</string>
    <string name="reg_input_pwd">请输入密码</string>
    <string name="reg_com_pwd">再次确认密码</string>
    <string name="reg_input_code">请输入验证码</string>
    <string name="ach_code">获取验证码</string>
    <string name="account_empty">账号为空</string>
    <string name="name_empty">姓名为空</string>
    <string name="phone_empty">手机号为空</string>
    <string name="pwd_empty">密码为空</string>
    <string name="pwd_nq">密码不一致</string>
    <string name="reg_success">注册成功</string>
    <string name="user_exist">账号已存在</string>
    <string name="reg_fail">注册失败</string>
    <string name="choose_file">请选择文件</string>
    <string name="uploading">上传中...</string>
    <string name="work_content">工作内容：</string>
    <string name="update_remind">升级提醒</string>
    <string name="is_update">发现新的版本，是否更新？</string>
    <string name="setting_not_update">暂不更新</string>
    <string name="setting_update">马上更新</string>
    <string name="downloading">亲，努力下载中...</string>
    <string name="download_success">下载成功</string>
    <string name="version_download_fail">下载失败，请检查网络和SD卡</string>
    <string name="exit">退出登录</string>
    <string name="account_safe">账号与安全</string>
    <string name="modify_pwd">修改密码</string>
    <string name="my_question">我的反映</string>
    <string name="my_consult">我的咨询</string>
    <string name="update_version">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="head_pic">头像</string>
    <string name="name">姓名</string>
    <string name="account">账号</string>
    <string name="qq_code">QQ号</string>
    <string name="email">邮箱</string>
    <string name="account_not_update">账号不可更改</string>
    <string name="take_photo">拍照</string>
    <string name="no_photo">相册没有图片</string>
    <string name="select_photo">从相册选择</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="save">保存</string>
    <string name="modify_name">修改姓名</string>
    <string name="modify_qq">修改QQ</string>
    <string name="modify_email">修改邮箱</string>
    <string name="modify_phone">修改手机号</string>
    <string name="input_value">请输入修改的内容</string>
    <string name="modify_success">修改成功</string>
    <string name="pwd_not_equal">密码不一致</string>
    <string name="save_space">保&#160;&#160;&#160;&#160;存</string>
    <string name="confirm_password_hint">请再次输入密码</string>
    <string name="input_old_password_hint">请输入原密码</string>
    <string name="address">地址：</string>
    <string name="kn_reason">困难原因：</string>
    <string name="bz_">备注</string>
    <string name="name_">姓名：</string>
    <string name="znname_">子女姓名：</string>
    <string name="hj_type">户籍类型：</string>
    <string name="lx_phone_">联系电话：</string>
    <string name="sfzh_">身份证号：</string>
    <string name="fname">父亲姓名：</string>
    <string name="fsfzh">父亲身份证：</string>
    <string name="mname">母亲姓名：</string>
    <string name="msfzh">母亲身份证：</string>
    <string name="jt_address">家庭住址：</string>
    <string name="look_grid_info">查看网格信息</string>
    <string name="look_xs_info">查看工作信息</string>
    <string name="base_info_1">基本信息</string>
    <string name="have_cun_">所属村：</string>
    <string name="have_grid_">所属网格：</string>
</resources>