<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/lay_detail_title"></include>

    <Button
        android:id="@+id/grid_function_btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_1"
        android:text="@string/look_grid_info"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/grid_function_btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_2"
        android:text="@string/look_xs_info"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/grid_function_btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_3"
        android:text="@string/rwfp"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/grid_function_btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_round_4"
        android:text="@string/gzfk"
        android:textColor="@color/white"/>

</LinearLayout>
