<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/lay_detail_title"></include>

    <include layout="@layout/info_detail_image_show"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/base_info_1"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/dszninfo_d_t_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/znname_"/>

        <TextView
            android:id="@+id/dszninfo_d_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_name"/>

        <TextView
            android:id="@+id/dszninfo_d_t_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_name"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/sex"/>

        <TextView
            android:id="@+id/dszninfo_d_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_name"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_sex"/>

        <TextView
            android:id="@+id/dszninfo_d_t_cun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_sex"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/have_cun_"/>

        <TextView
            android:id="@+id/dszninfo_d_cun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_sex"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_cun"/>

        <TextView
            android:id="@+id/dszninfo_d_t_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_cun"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/have_grid_"/>

        <TextView
            android:id="@+id/dszninfo_d_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_cun"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_grid"/>


        <TextView
            android:id="@+id/dszninfo_d_t_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_grid"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/fname"/>

        <TextView
            android:id="@+id/dszninfo_d_fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_grid"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_fname"/>

        <TextView
            android:id="@+id/dszninfo_d_t_fsfzh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_fname"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/fsfzh"/>

        <TextView
            android:id="@+id/dszninfo_d_fsfzh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_fname"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_fsfzh"/>

        <TextView
            android:id="@+id/dszninfo_d_t_mname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_fsfzh"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/mname"/>

        <TextView
            android:id="@+id/dszninfo_d_mname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_fsfzh"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_fsfzh"/>

        <TextView
            android:id="@+id/dszninfo_d_t_msfzh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_mname"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/msfzh"/>

        <TextView
            android:id="@+id/dszninfo_d_msfzh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_mname"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_msfzh"/>

        <TextView
            android:id="@+id/dszninfo_d_t_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_msfzh"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/jt_address"/>

        <TextView
            android:id="@+id/dszninfo_d_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_msfzh"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_address"/>

        <TextView
            android:id="@+id/dszninfo_d_t_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_address"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/lx_phone_"/>

        <TextView
            android:id="@+id/dszninfo_d_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dszninfo_d_t_address"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/dszninfo_d_t_phone"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/bz_"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/dszninfo_d_bz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>
</LinearLayout>
