<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/bg_color"
              android:fitsSystemWindows="true"
              android:orientation="vertical">

    <include layout="@layout/lay_detail_title"></include>

    <include layout="@layout/info_detail_image_show"></include>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/base_info_1"
        android:textSize="16sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/ylfn_t_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/name_"/>

        <TextView
            android:id="@+id/ylfn_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ylfn_t_name"/>

        <TextView
            android:id="@+id/ylfn_t_cun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_t_name"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/have_cun_"/>

        <TextView
            android:id="@+id/ylfn_cun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_name"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ylfn_t_cun"/>

        <TextView
            android:id="@+id/ylfn_t_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_t_cun"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/have_grid_"/>

        <TextView
            android:id="@+id/ylfn_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_cun"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ylfn_t_grid"/>

        <TextView
            android:id="@+id/ylfn_t_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_t_grid"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/sfzh_"/>

        <TextView
            android:id="@+id/ylfn_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_grid"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ylfn_t_code"/>

        <TextView
            android:id="@+id/ylfn_t_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_t_code"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hyzk"/>

        <TextView
            android:id="@+id/ylfn_birth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_code"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ylfn_t_birth"/>

        <TextView
            android:id="@+id/ylfn_t_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_t_birth"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hj_type"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/ylfn_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_birth"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ylfn_t_type"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/ylfn_t_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_t_type"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/ylfn_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ylfn_type"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/ylfn_t_address"
            android:visibility="gone"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/bz_"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/ylfn_bz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/white"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"/>
</LinearLayout>
